2008-12-09  Vincent Untz  <vuntz@gnome.org>

	Stop using deprecated API (except for one bonobo API) and single
	include for glib/gtk+.

	* panel-applet-gconf.h: single include for glib
	* panel-applet.c: single include for gtk+
	(panel_applet_associate_schemas_in_dir):
	s/gconf_entry_free/gconf_entry_unref
	(panel_applet_can_focus), (panel_applet_focus):
	s/gtk_tooltips_data_get/gtk_widget_get_has_tooltip/. Sure, it'd be
	better to do both, but let's just say we don't like old applets with
	old code.
	(panel_applet_handle_background_string),
	(panel_applet_property_bag): do not mark strings that are not visible
	as translatable
	(panel_applet_update_background_for_widget):
	s/gtk_rc_style_unref/g_object_unref/
	* panel-applet.h: single include for glib/gtk+

2008-12-08  Vincent Untz  <vuntz@gnome.org>

	* panel-test-applets.c: (setup_combo), (setup_options): use NC_() and
	then g_dpgettext2() instead of Q_()
	Based on patch by Philip Withnall <bugzilla@tecnocode.co.uk>
	Fix bug #558418, part of a GNOME Goal.

==================== 2.24.2 ====================

2008-11-09  Vincent Untz  <vuntz@gnome.org>

	* libpanelapplet-2.0.pc.in: remove double gconf-2.0

2008-11-09  Vincent Untz  <vuntz@gnome.org>

	* libpanelapplet-2.0-uninstalled.pc.in:
	* libpanelapplet-2.0.pc.in: really add gconf-2.0 here.

2008-11-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libpanelapplet-2.0.pc.in: Add gconf-2.0 here.

==================== 2.24.1 ====================

==================== 2.24.0 ====================

==================== 2.23.92 ====================

==================== 2.23.91 ====================

==================== 2.23.90.1 ====================

==================== 2.23.90 ====================

==================== 2.23.6 ====================

==================== 2.23.5 ====================

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Fix compiler warnings. Patch by Kjartan Maraas <kmaraas@gnome.org>.
	Part of bug #521409.

	* panel-applet-shell.c: